# channel-capacity-estimator

./: .gitignore  Makefile  README.rst  Readme.rst  pyproject.toml  requirements.txt  setup.py
cce/: __init__.py  calculate_weighted_loss.py  dataeng.py  estimator.py  optimization.py  optimize.py  optimize_weights.py  preprocess.py  preprocessing.py  score.py  scoring.py
docs/: Makefile  conf.py  index.rst  make.bat
docs/source/: cce.rst  modules.rst
src/cce/: __init__.py
tests/: kraskov.py  noisy_channel.py  plain_kraskov.py  simple_kraskov.py  teddybear_fabric.py  teddybear_factory.py  test_dataeng.py  test_estimator.py  test_estimator_general.py  test_estimator_mi.py  test_preprocess.py  test_use_case_1.py  test_use_case_2.py  test_use_case_3.py  test_weight_finding.py  test_weight_optimizer.py  test_weighted_estimator_mi.py
