[tool.poetry]
name = "channel-capacity-estimator"
version = "1.1"
description = "Package for estimation of information channel capacity."
authors = ["Frederic Grabowski <grabowski.frederic@gmail.com>, Pawel Czyz <pczyz@protonmail.com>"]
license = "GPL-3.0"
readme = "README.rst"
packages = [{include = "cce", from = "src"}]

[tool.poetry.dependencies]
python = "^3.8,<3.12"
numpy = "^1.12,<2.0"
scipy = "^1.0.0"
tensorflow = ">=2.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
